--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
-    "@babel/preset-react": "^7.23.3",
-    "@testing-library/react": "^14.1.2",
-    "@types/node": "^20.11.5",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "react-test-renderer": "^18.2.0"
+    "@babel/core": "7.23.7",
+    "@babel/preset-env": "7.23.8",
+    "@babel/preset-react": "7.23.3",
+    "@testing-library/react": "14.1.2",
+    "@types/node": "20.11.5",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "react-test-renderer": "18.2.0"
   }
 }
